--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -5,7 +5,6 @@ dopepod
 {% endblock %}
 
 {% block content %}
-<!-- MULTI BAR -->
 {% if stage_open %}
 <div class="container-fluid sticky-top extended" id="flap">
   <div class="row open" id="stage">
@@ -27,6 +26,7 @@ dopepod
       {% endblock %}
     </div>
   </div>
+  <!-- MUSLTIBAR -->
   <div class="row color-1-trans shadow-down" id="multibar-scroll">
     {% include 'multibar.html' %}
   </div>
