--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -1,38 +1,31 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+{% extends 'index/results_base.html' %}
 
 {% block title %}
 dopepod
 {% endblock %}
 
-{% block results %}
-<div class="col-auto color-1 results-bar">
-  <span class="results-header">
-    {{ results_header }}
-  </span>
-</div>
-<div class="col-12 results-wrapper">
-  <form id="results-form" method="GET" action="{% url 'search' %}">
-    <input type="hidden" id="selected_q" name="selected_q" value="{{ selected_q }}">
-    {% include 'optionsbar.html' %}
-  </form>
-  <div class="row results-list">
-    {% for podcast in podcasts %}
-      <a class="col-lg-2 col-md-3 col-4 result-box show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-        <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
-        <h6 class="result-title">
-          {{ podcast.title }}
-        </h6>
-        <p class="result-artist">
-          by {{ podcast.artist }}
-        </p>
-      </a>
-    {% empty %}
-      <div class="col">
-        <p>
-          No results :p
-        </p>
-      </div>
-    {% endfor %}
-  </div>
-</div>
+{% block results_x %}
+{% if podcasts %}
+  {% for podcast in podcasts %}
+
+  <a class="col-lg-2 col-md-3 col-4 result-box show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+    <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
+    <h6 class="result-title">
+      {{ podcast.title }}
+    </h6>
+    <p class="result-artist">
+      by {{ podcast.artist }}
+    </p>
+  </a>
+  {% if podcasts.has_next and forloop.counter == 30 %}
+  <div class="infinite"></div>
+  {% endif %}
+  {% endfor %}
+{% else %}
+    <div class="col">
+      <p>
+        No results
+      </p>
+    </div>
+{% endif %}
 {% endblock %}
