--- a/index/templates/index/results_list.html
+++ b/index/templates/index/results_list.html
@@ -1,73 +1,60 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+{% extends 'index/results_base.html' %}
 
 {% block title %}
 dopepod
 {% endblock %}
 
-{% block results %}
-<div class="col-auto color-1 results-bar">
-  <span class="results-header">
-    {{ results_header }}
-  </span>
-</div>
-<div class="col-12 results-wrapper">
-  <form id="results-form" method="GET" action="{% url 'browse' %}">
-    <input type="hidden" id="selected_alphabet" name="selected_alphabet" value="{{ selected_alphabet }}">
-    {% include 'optionsbar.html' %}
-  </form>
-  <div class="row results-list">
-    {% if podcasts %}
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <ul class="browse-results-list">
-      {% for podcast in podcasts1 %}
-      <li>
-        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-          {{ podcast.title }}
-        </a>
-      </li>
-      {% endfor %}
-      </ul>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <ul class="browse-results-list">
-      {% for podcast in podcasts2 %}
-      <li>
-        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-          {{ podcast.title }}
-        </a>
-      </li>
-      {% endfor %}
-      </ul>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <ul class="browse-results-list">
-      {% for podcast in podcasts3 %}
-      <li>
-        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-          {{ podcast.title }}
-        </a>
-      </li>
-      {% endfor %}
-      </ul>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <ul class="browse-results-list">
-      {% for podcast in podcasts4 %}
-      <li>
-        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-          {{ podcast.title }}
-        </a>
-      </li>
-      {% endfor %}
-      </ul>
-    </div>
-    {% else %}
-    <div class="col">
-      <p>
-        No results :p
-      </p>
-    </div>
-    {% endif %}
+{% block results_x %}
+{% if podcasts %}
+  <div class="col-lg-3 col-md-6 col-sm-12">
+    <ul class="browse-results-list">
+    {% for podcast in podcasts1 %}
+    <li>
+      <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+        {{ podcast.title }}
+      </a>
+    </li>
+    {% endfor %}
+    </ul>
   </div>
-</div>
+  <div class="col-lg-3 col-md-6 col-sm-12">
+    <ul class="browse-results-list">
+    {% for podcast in podcasts2 %}
+    <li>
+      <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+        {{ podcast.title }}
+      </a>
+    </li>
+    {% endfor %}
+    </ul>
+  </div>
+  <div class="col-lg-3 col-md-6 col-sm-12">
+    <ul class="browse-results-list">
+    {% for podcast in podcasts3 %}
+    <li>
+      <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+        {{ podcast.title }}
+      </a>
+    </li>
+    {% endfor %}
+    </ul>
+  </div>
+  <div class="col-lg-3 col-md-6 col-sm-12">
+    <ul class="browse-results-list">
+    {% for podcast in podcasts4 %}
+    <li>
+      <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+        {{ podcast.title }}
+      </a>
+    </li>
+    {% endfor %}
+    </ul>
+  </div>
+{% else %}
+  <div class="col">
+    <p>
+      No results
+    </p>
+  </div>
+{% endif %}
 {% endblock %}
