--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -12,15 +12,9 @@
       {% endblock %}
     </title>
     <!--Font Awesome-->
-    <!--use just the brands and solid styles-->
-    <script src="https://use.fontawesome.com/releases/v5.0.2/js/brands.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.2/js/solid.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.2/js/regular.js"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.2/js/fontawesome.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <!-- Social Buttons -->
-    <link rel="stylesheet" href="{% static 'bootstrap-social.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
