--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -1,7 +1,7 @@
 {% load account socialaccount %}
 
 <div class="row">
-  <div class="col-12" id="splash-top">
+  <div class="col" id="splash-top">
     <h5>
       Search for and listen to thousands of free podcasts on <strong>dopepod</strong>
     </h5>
@@ -34,7 +34,7 @@
   </div>
 </div>
 <div classa="row">
-  <div class="col-12" id="splash-bottom">
+  <div class="col" id="splash-bottom">
     <div id="login-errors">
     </div>
     <div id="login-wrapper">
@@ -62,7 +62,7 @@
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col form-check form-check-inline">
+                <div class="col form-check">
                   <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" name="remember" id="remember">
                     Remember me
@@ -131,7 +131,7 @@
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col form-check form-check-inline">
+                <div class="col form-check">
                   <label class="form-check-label">
                     <input class="form-check-input" type="checkbox" name="remember" id="remember">
                     Remember me
@@ -164,7 +164,7 @@
           </div>
           <div class="tab-pane fade" id="pills-password" role="tabpanel" aria-labelledby="pills-password-tab">
             <p>
-              Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it.
+              Forgot your password? Enter your email address below, and we'll send you an email allowing you to reset it.
             </p>
             <form class="password-form" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
               {% csrf_token %}
@@ -185,12 +185,12 @@
       </div>
     </div>
     <div id="social-login">
-      <!--<a class="btn btn-block btn-social btn-google socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Google" >
-        <i class="fa fab-google "></i> Sign in with Google
+      <a class="btn socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Google">
+        <i class="fa fa-google float-left"></i> Sign in with Google
       </a>
-      <a class="btn btn-block btn-social btn-twitter">
-        <span class="fa fab-facebook"></span> Sign in with Facebook
-      </a>-->
+      <a class="btn socialaccount_provider google social-link" href="/account/facebook/login/?process=login" title="Facebook">
+        <i class="fa fab-facebook float-left"></i> Sign in with Facebook
+      </a>
       <!-- <a title="Reddit" class="socialaccount_provider reddit" href="/account/reddit/login/?process=login">
       <i class="fab fa-reddit"></i>
       </a> -->
